Building Polybenh for the moment only and adding nvptx targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,16 +27,16 @@ use_c99()
 option(OMP_DISABLE "Disable OpenMP" OFF)
 
 if(NOT OMP_DISABLE)
-    find_package(OpenMP)
-    if(OPENMP_FOUND)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    endif()
+   	find_package(OpenMP)
+   	if(OPENMP_FOUND)
+   		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+   		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+   	endif()
 endif()
 
 # Set OMP target flags
-set(OMP_TARGETS "x86_64-unknown-linux-spark")
-set(OMP_OFFLOAD_FLAGS "-omptargets=${OMP_TARGETS} --target=x86_64-unknown-linux-gnu")
+set(OMP_TARGETS "nvptx64")
+set(OMP_OFFLOAD_FLAGS "-fopenmp-targets=${OMP_TARGETS} --target=x86_64-unknown-linux-gnu")
 
 option(OMP_OFFLOAD "Offload to accelerator" ON)
 if(OMP_OFFLOAD AND OPENMP_FOUND)
