--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -3,8 +3,8 @@ add_custom_target(experiments)
 
 include_directories(common)
 
-add_subdirectory(mgBench)
-add_subdirectory(OMPSpec)
-add_subdirectory(Parboil)
+#add_subdirectory(mgBench)
+#add_subdirectory(OMPSpec)
+#add_subdirectory(Parboil)
 add_subdirectory(Polybench)
-add_subdirectory(Rodinia)
+#add_subdirectory(Rodinia)
