--- a/benchmarks/Polybench/3MM/CMakeLists.txt
+++ b/benchmarks/Polybench/3MM/CMakeLists.txt
@@ -12,3 +12,5 @@ add_dependencies(experiments 3MM)
 add_dependencies(supported 3MM)
 
 add_test(Polybench_3MM 3MM)
+
+install(TARGETS 2MM DESTINATION)
