--- a/benchmarks/Polybench/BICG/CMakeLists.txt
+++ b/benchmarks/Polybench/BICG/CMakeLists.txt
@@ -11,3 +11,5 @@ add_dependencies(Polybench BICG)
 add_dependencies(supported BICG)
 
 add_test(Polybench_BICG BICG)
+
+install(TARGETS BICG DESTINATION)
