--- a/benchmarks/Polybench/CORR/CMakeLists.txt
+++ b/benchmarks/Polybench/CORR/CMakeLists.txt
@@ -12,3 +12,5 @@ add_dependencies(Polybench CORR)
 #add_dependencies(supported CORR)
 
 add_test(Polybench_CORR CORR)
+
+install(TARGETS CORR DESTINATION)
