--- a/benchmarks/Polybench/GRAMSCHM/CMakeLists.txt
+++ b/benchmarks/Polybench/GRAMSCHM/CMakeLists.txt
@@ -10,3 +10,5 @@ target_link_libraries(GRAMSCHM m)
 add_dependencies(Polybench GRAMSCHM)
 
 #add_test(Polybench_GRAMSCHM GRAMSCHM)
+
+install(TARGETS GRAMSCHM DESTINATION)
