--- a/benchmarks/Polybench/MVT/CMakeLists.txt
+++ b/benchmarks/Polybench/MVT/CMakeLists.txt
@@ -11,3 +11,5 @@ add_dependencies(Polybench MVT)
 add_dependencies(supported MVT)
 
 add_test(Polybench_MVT MVT)
+
+install(TARGETS MVT DESTINATION)
