--- a/benchmarks/Polybench/SYR2K/CMakeLists.txt
+++ b/benchmarks/Polybench/SYR2K/CMakeLists.txt
@@ -12,3 +12,5 @@ add_dependencies(experiments SYR2K)
 add_dependencies(supported SYR2K)
 
 add_test(Polybench_SYR2K SYR2K)
+
+install(TARGETS SYR2K DESTINATION)
