--- a/benchmarks/Polybench/COVAR/CMakeLists.txt
+++ b/benchmarks/Polybench/COVAR/CMakeLists.txt
@@ -12,3 +12,5 @@ add_dependencies(experiments COVAR)
 add_dependencies(supported COVAR)
 
 add_test(Polybench_COVAR COVAR)
+
+install(TARGETS COVAR DESTINATION)
