--- a/benchmarks/Polybench/GESUMMV/CMakeLists.txt
+++ b/benchmarks/Polybench/GESUMMV/CMakeLists.txt
@@ -11,3 +11,5 @@ add_dependencies(Polybench GESUMMV)
 add_dependencies(supported GESUMMV)
 
 add_test(Polybench_GESUMMV GESUMMV)
+
+install(TARGETS GESUMMV DESTINATION)
