--- a/benchmarks/Polybench/SYRK_M/CMakeLists.txt
+++ b/benchmarks/Polybench/SYRK_M/CMakeLists.txt
@@ -9,3 +9,5 @@ add_executable(SYRK_M ${SRC_FILES})
 add_dependencies(Polybench SYRK_M)
 
 #add_test(Polybench_SYRK_M SYRK_M)
+
+install(TARGETS SYRK_M DESTINATION)
