Fixing installation destination

--- a/benchmarks/Polybench/3DCONV/CMakeLists.txt
+++ b/benchmarks/Polybench/3DCONV/CMakeLists.txt
@@ -12,4 +12,4 @@ add_dependencies(supported 3DCONV)
 
 add_test(Polybench_3DCONV 3DCONV)
 
-install(TARGETS 3DCONV DESTINATION)
+install(TARGETS 3DCONV DESTINATION Polybench)
