--- a/benchmarks/Polybench/GRAMSCHM/CMakeLists.txt
+++ b/benchmarks/Polybench/GRAMSCHM/CMakeLists.txt
@@ -11,4 +11,4 @@ add_dependencies(Polybench GRAMSCHM)
 
 #add_test(Polybench_GRAMSCHM GRAMSCHM)
 
-install(TARGETS GRAMSCHM DESTINATION)
+install(TARGETS GRAMSCHM DESTINATION Polybench)
