--- a/benchmarks/Polybench/2DCONV/CMakeLists.txt
+++ b/benchmarks/Polybench/2DCONV/CMakeLists.txt
@@ -12,4 +12,4 @@ add_dependencies(supported 2DCONV)
 
 add_test(Polybench_2DCONV 2DCONV)
 
-install(TARGETS 2DCONV DESTINATION)
+install(TARGETS 2DCONV DESTINATION Polybench)
