--- a/benchmarks/Polybench/2MM/CMakeLists.txt
+++ b/benchmarks/Polybench/2MM/CMakeLists.txt
@@ -13,4 +13,4 @@ add_dependencies(supported 2MM)
 
 add_test(Polybench_2MM 2MM)
 
-install(TARGETS 2MM DESTINATION)
+install(TARGETS 2MM DESTINATION Polybench)
